--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="text-white">
                         <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">
                             Carnaval 2026:<br/>
-                            <span class="text-yellow-300" style="color:#edd0d1 important!;">Quanto Mais Você Leva,</span><br/>
+                            <span style="color:#edd0d1 important!;">Quanto Mais Você Leva,</span><br/>
                             Mais Você Economiza!
                         </h1>
                         <p class="text-xl md:text-2xl mb-8 text-purple-100">
@@ -361,4 +361,5 @@
 </body>
 
 </html>
+
 
