--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="text-white">
                         <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">
                             Carnaval 2026:<br/>
-                            <span style="color:#edd0d1 important!;">Quanto Mais Você Leva,</span><br/>
+                            <span class="text-yellow-300">Quanto Mais Você Leva,</span><br/>
                             Mais Você Economiza!
                         </h1>
                         <p class="text-xl md:text-2xl mb-8 text-purple-100">
@@ -71,7 +71,7 @@
     </section>
 
     <!-- COUNTDOWN -->
-    <section class="py-8 bg-gradient-to-r from-pink-500 to-orange-500">
+    <section class="py-8 bg-gradient-to-r from-pink-700 to-orange-500">
         <div class="container mx-auto px-4">
             <div class="max-w-4xl mx-auto text-center text-white">
                 <h3 class="text-2xl md:text-3xl font-bold mb-4">⏰ Promoção por Tempo Limitado!</h3>
@@ -361,5 +361,6 @@
 </body>
 
 </html>
+
 
 
