--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <!-- HERO -->
     <section class="gradient-bg relative overflow-hidden py-20 md:py-28">
-        <img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="288px" height="115px">
+        <div style="align:center"><img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="288px" height="115px"></div>
         <div class="container mx-auto px-4 md:px-6 relative z-10">
             <div class="max-w-6xl mx-auto">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
