--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </a>
                     </div>
                     <div class="hidden md:block">
-                        <img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="187px" height="75px">
+                        <div style="Margin: auto"><img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="187px" height="75px"></div>
                         <div class="bg-white/10 backdrop-blur-sm rounded-3xl p-8 border-4 border-white/30">
                             <div class="bg-gray-200 rounded-2xl aspect-[3/4] flex items-center justify-center">
                                 <p class="text-gray-500 text-center px-8">[IMAGEM HERO]<br/>Modelo com biquíni<br/>Visual confiante</p>
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
