--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     </style>
 </head>
 <body class="bg-gray-50">
-    
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+            <td align="center"><img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="187px" height="75px"></td>
+        </tr>
+    </table>
+        
     <!-- HERO -->
     <section class="gradient-bg relative overflow-hidden py-20 md:py-28">
         <div class="container mx-auto px-4 md:px-6 relative z-10">
@@ -59,7 +64,6 @@
                         </a>
                     </div>
                     <div class="hidden md:block">
-                        <div style="Margin: auto"><img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="187px" height="75px"></div>
                         <div class="bg-white/10 backdrop-blur-sm rounded-3xl p-8 border-4 border-white/30">
                             <div class="bg-gray-200 rounded-2xl aspect-[3/4] flex items-center justify-center">
                                 <p class="text-gray-500 text-center px-8">[IMAGEM HERO]<br/>Modelo com biquíni<br/>Visual confiante</p>
@@ -362,6 +366,7 @@
 </body>
 
 </html>
+
 
 
 
