--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body class="bg-gray-50">
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="background: linear-gradient(135deg, #1f314b 0%, #08459e 100%);">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:#1f314b;">
         <tr>
             <td align="center"><img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="187px" height="75px"></td>
         </tr>
@@ -366,6 +366,7 @@
 </body>
 
 </html>
+
 
 
 
