--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     </style>
 </head>
 <body class="bg-gray-50">
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:#1f314b;">
+    <!-- HERO -->
+    <section class="gradient-bg relative overflow-hidden py-20 md:py-28">
+         <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
             <td align="center"><img src="images/logo-modas-dilo-transparent-white.png" alt="Logo" width="187px" height="75px"></td>
         </tr>
     </table>
-        
-    <!-- HERO -->
-    <section class="gradient-bg relative overflow-hidden py-20 md:py-28">
         <div class="container mx-auto px-4 md:px-6 relative z-10">
             <div class="max-w-6xl mx-auto">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
@@ -366,6 +365,7 @@
 </body>
 
 </html>
+
 
 
 
