--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&display=swap');
         body { font-family: 'Montserrat', sans-serif; }
         .gradient-bg { background: linear-gradient(135deg, #1f314b 0%, #08459e 100%); }
-        .gradient-text { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .gradient-text { background: linear-gradient(135deg, #ffc8a7 0%, #fe6001 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         .shine-effect { position: relative; overflow: hidden; }
         .shine-effect::after { content: ''; position: absolute; top: -50%; left: -100%; width: 50%; height: 200%; background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent); transform: rotate(45deg); animation: shine 3s infinite; }
         @keyframes shine { 0% { left: -100%; } 50%, 100% { left: 200%; } }
@@ -365,6 +365,7 @@
 </body>
 
 </html>
+
 
 
 
