--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
         <div class="container mx-auto px-4 py-4">
             <div class="flex justify-center">
                 <div class="bg-gray-200 w-48 h-20 rounded-lg flex items-center justify-center">
-                    <img src="images/produto1.jpg"
-                    <p class="text-gray-500 font-bold text-sm">[LOGO MODAS DILÔ]</p>
+                    <img src="images/logo-modas-dilo-transparent.png" width="175px" height="70px">
                 </div>
             </div>
         </div>
@@ -435,4 +434,5 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
