--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4">
             <div class="flex justify-center">
-                <div class="bg-gray-200 w-48 h-20 rounded-lg flex items-center justify-center">
+                <div class="w-48 h-20 rounded-lg flex items-center justify-center">
                     <img src="images/logo-modas-dilo-transparent.png" width="175px" height="70px">
                 </div>
             </div>
@@ -434,5 +434,6 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
