--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="hidden md:block">
                         <div class="bg-white/10 backdrop-blur-sm rounded-3xl p-8 border-4 border-brand-yellow/30">
                             <!---<div class="bg-gray-200 rounded-2xl aspect-[3/4] flex items-center justify-center">--->
-                                <img src="images/img-hero-feature.jpg" width="570px" height="646px">
+                                <img src="images/img-hero-feature.jpg" width="570px" height="646px" class="bg-gray-200 rounded-2xl aspect-[3/4] flex items-center justify-center">
                            <!--- </div>--->
                         </div>
                     </div>
@@ -434,6 +434,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
