--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="order-2 md:order-1">
                         <div class="bg-gray-200 rounded-3xl aspect-square flex items-center justify-center border-4 border-brand-blue/10">
-                            <p class="text-gray-500 text-center px-8">[IMAGEM LIFESTYLE]<br/>images/lifestyle.jpg<br/>Mulheres 35-50 anos<br/>Praia/alegria</p>
+                             <img src="images/img-hero-feature.jpg" width="570px" height="646px" class="rounded-3xl aspect-square flex items-center justify-center border-4 border-brand-blue/10">
+                            <!---<p class="text-gray-500 text-center px-8">[IMAGEM LIFESTYLE]<br/>images/lifestyle.jpg<br/>Mulheres 35-50 anos<br/>Praia/alegria</p>--->
                         </div>
                     </div>
                     <div class="order-1 md:order-2">
@@ -434,6 +435,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
