--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     </div>
                     <div>
                         <div class="bg-gray-200 rounded-3xl aspect-[4/3] flex items-center justify-center border-4 border-brand-blue/10">
-                            <p class="text-gray-500 text-center px-8">[IMAGEM CTA]<br/>images/cta-final.jpg<br/>Mulher confiante<br/>Empoderada</p>
+                            <img src="images/img-beneficios-modas-dilo-feature.jpg" width="555px" height="694px" class="rounded-3xl flex items-center justify-center">
                         </div>
                     </div>
                 </div>
@@ -435,6 +435,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
