--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favico-logo-151629640-1723752591-fa186d.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favico-logo-151629640-1723752591-fa186d.png">
+    <link rel="apple-touch-icon" href="images/favico-logo-151629640-1723752591-fa186d.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnaval 2026 - Modas Dilô | Até 15% OFF em Moda Praia</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -435,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
