--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         body { font-family: 'Montserrat', sans-serif; }
         
         .gradient-bg-hero {
-            background: linear-gradient(135deg, #0E2440 0%, #1a3a5c 100%);
+            background: linear-gradient(135deg, #ffece6 0%, #fbc6b6 100%);
         }
         
         .gradient-text-brand {
@@ -438,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
