--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     colors: {
                         'brand-blue': '#0E2440',
                         'brand-green': '#078C03',
-                        'brand-yellow': '#F2D027',
+                        'brand-yellow': '#350e02',
                         'brand-peach': '#ffece6',
                     }
                 }
@@ -104,7 +104,7 @@
         <div class="container mx-auto px-4 md:px-6 relative z-10">
             <div class="max-w-6xl mx-auto">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
-                    <div class="text-white">
+                    <div style="color:#000000">
                         <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">
                             Carnaval 2026:<br/>
                             <span class="text-brand-yellow">Quanto Mais Você Leva,</span><br/>
@@ -438,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
