--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <span class="text-brand-yellow">Quanto Mais Você Leva,</span><br/>
                             Mais Você Economiza!
                         </h1>
-                        <p class="text-xl md:text-2xl mb-8 text-gray-200">
+                        <p class="text-xl md:text-2xl mb-8 text-black-200">
                             Biquínis, maiôs e saídas de praia com até <strong class="text-brand-yellow">15% OFF</strong>.<br/>
                             Porque você merece brilhar na praia, piscina e nos blocos! ✨
                         </p>
@@ -438,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
