--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             Mais Você Economiza!
                         </h1>
                         <p class="text-xl md:text-2xl mb-8 text-black-200">
-                            Biquínis, maiôs e saídas de praia com até <strong class="text-brand-yellow">15% OFF</strong>.<br/>
+                            Biquínis, maiôs e saídas de praia com até <br/><strong class="text-brand-yellow">15% OFF</strong>.<br/>
                             Porque você merece brilhar na praia, piscina e nos blocos! ✨
                         </p>
                         <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 mb-8 border-2 border-brand-yellow/30">
@@ -438,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
