--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                                     <span class="text-2xl font-bold text-brand-yellow">15% OFF</span>
                                 </div>
                             </div>
-                            <p class="text-sm text-gray-300 mt-4 text-center">*Desconto aplicado automaticamente no carrinho</p>
+                            <p class="text-sm text-black-300 mt-4 text-center">*Desconto aplicado automaticamente no carrinho</p>
                         </div>
-                        <a href="https://www.modasdilo.com.br/moda-praia/" class="inline-block bg-brand-yellow text-brand-blue font-bold text-lg px-10 py-5 rounded-full hover:bg-yellow-300 transition-all transform hover:scale-105 shine-effect shadow-2xl">
+                        <a href="https://www.modasdilo.com.br/moda-praia/" class="inline-block bg-brand-peach text-brand-white font-bold text-lg px-10 py-5 rounded-full hover:bg-yellow-300 transition-all transform hover:scale-105 shine-effect shadow-2xl">
                             🏖️ Ver Moda Praia Agora
                         </a>
                     </div>
@@ -438,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
