--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <h3 class="text-2xl md:text-3xl font-bold mb-4 text-brand-blue">⏰ Promoção por Tempo Limitado!</h3>
                 <div class="flex justify-center gap-4 md:gap-8" id="countdown">
                     <div class="bg-brand-blue rounded-xl p-4 min-w-[80px]">
-                        <div class="text-4xl md:text-5xl font-bold text-brand-yellow" id="days">00</div>
+                        <div class="text-4xl md:text-5xl font-bold text-brand-peach" id="days">00</div>
                         <div class="text-sm uppercase mt-1 text-white">Dias</div>
                     </div>
                     <div class="bg-brand-blue rounded-xl p-4 min-w-[80px]">
@@ -163,11 +163,11 @@
                         <div class="text-sm uppercase mt-1 text-white">Horas</div>
                     </div>
                     <div class="bg-brand-blue rounded-xl p-4 min-w-[80px]">
-                        <div class="text-4xl md:text-5xl font-bold text-brand-yellow" id="minutes">00</div>
+                        <div class="text-4xl md:text-5xl font-bold text-brand-peach" id="minutes">00</div>
                         <div class="text-sm uppercase mt-1 text-white">Min</div>
                     </div>
                     <div class="bg-brand-blue rounded-xl p-4 min-w-[80px]">
-                        <div class="text-4xl md:text-5xl font-bold text-brand-yellow" id="seconds">00</div>
+                        <div class="text-4xl md:text-5xl font-bold text-brand-peach" id="seconds">00</div>
                         <div class="text-sm uppercase mt-1 text-white">Seg</div>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
     </section>
 
     <!-- FORMULÁRIO -->
-    <section class="py-20 bg-brand-blue">
+    <section class="py-20 gradient-bg-hero">
         <div class="container mx-auto px-4">
             <div class="max-w-4xl mx-auto">
                 <div class="bg-white rounded-3xl shadow-2xl overflow-hidden">
@@ -438,6 +438,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
