--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <div class="bg-white rounded-3xl shadow-2xl overflow-hidden">
                     <div class="grid md:grid-cols-2">
                         <div class="bg-gradient-to-br from-brand-peach to-brand-peacher p-8 md:p-12 text-white flex flex-col justify-center">
-                            <h2 class="text-3xl md:text-4xl font-bold mb-6 color:#000000">Ganhe 10% OFF na Próxima Compra! 🎁</h2>
+                            <h2 class="text-3xl md:text-4xl font-bold mb-6"><span style="color:#000">Ganhe 10% OFF na Próxima Compra! 🎁</span></h2>
                             <p class="text-lg mb-6 text-black-100">Cadastre-se e receba um cupom exclusivo de <strong class="text-brand-yellow">10% de desconto</strong> para usar em qualquer compra futura!</p>
                             <ul class="space-y-3">
                                 <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Cupom enviado por e-mail na hora</span></li>
