--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
                     <div class="grid md:grid-cols-2">
                         <div class="bg-gradient-to-br from-brand-peach to-brand-peacher p-8 md:p-12 text-white flex flex-col justify-center">
                             <h2 class="text-3xl md:text-4xl font-bold mb-6"><span style="color:#000">Ganhe 10% OFF na Próxima Compra! 🎁</span></h2>
-                            <p class="text-lg mb-6 text-black-100">Cadastre-se e receba um cupom exclusivo de <strong class="text-brand-yellow">10% de desconto</strong> para usar em qualquer compra futura!</p>
+                            <p class="text-lg mb-6 color:#000">Cadastre-se e receba um cupom exclusivo de <strong class="text-brand-yellow">10% de desconto</strong> para usar em qualquer compra futura!</p>
                             <ul class="space-y-3">
-                                <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Cupom enviado por e-mail na hora</span></li>
-                                <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Sem valor mínimo de compra</span></li>
-                                <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Promoções exclusivas em primeira mão</span></li>
+                                <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Cupom enviado por e-mail na hora</span></li>
+                                <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Sem valor mínimo de compra</span></li>
+                                <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Promoções exclusivas em primeira mão</span></li>
                             </ul>
                         </div>
                         <div class="p-8 md:p-12 bg-white">
@@ -399,7 +399,7 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="bg-brand-blue py-12 text-white">
+    <footer class="gradient-bg-hero py-12 text-white">
         <div class="container mx-auto px-4 text-center">
             <h3 class="text-2xl font-bold mb-4 text-brand-yellow">Modas Dilô</h3>
             <p class="text-gray-300 mb-6">Moda feminina com qualidade e estilo</p>
@@ -439,6 +439,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
