--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     <footer class="gradient-bg-hero py-12 text-white">
         <div class="container mx-auto px-4 text-center">
             <h3 class="text-2xl font-bold mb-4 text-brand-yellow">Modas Dilô</h3>
-            <p class="text-gray-300 mb-6">Moda feminina com qualidade e estilo</p>
+            <p class="text-brand-yellow mb-6">Moda feminina com qualidade e estilo</p>
             <div class="flex justify-center gap-8 mb-6 flex-wrap">
                 <a href="https://www.modasdilo.com.br/" class="hover:text-brand-yellow transition-colors">Loja Online</a>
                 <a href="https://www.instagram.com/modasdilo/" target="_blank" class="hover:text-brand-yellow transition-colors">Instagram</a>
@@ -439,6 +439,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
