--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
             <h3 class="text-2xl font-bold mb-4 text-brand-yellow">Modas Dilô</h3>
             <p class="text-brand-yellow mb-6">Moda feminina com qualidade e estilo</p>
             <div class="flex justify-center gap-8 mb-6 flex-wrap">
-                <a href="https://www.modasdilo.com.br/" class="hover:text-brand-yellow transition-colors">Loja Online</a>
-                <a href="https://www.instagram.com/modasdilo/" target="_blank" class="hover:text-brand-yellow transition-colors">Instagram</a>
-                <a href="https://www.modasdilo.com.br/moda-praia/" class="hover:text-brand-yellow transition-colors">Moda Praia</a>
+                <a href="https://www.modasdilo.com.br/" class="link:grey hover:text-brand-yellow transition-colors">Loja Online</a>
+                <a href="https://www.instagram.com/modasdilo/" target="_blank" class="link:grey hover:text-brand-yellow transition-colors">Instagram</a>
+                <a href="https://www.modasdilo.com.br/moda-praia/" class="link:grey hover:text-brand-yellow transition-colors">Moda Praia</a>
             </div>
-            <p class="text-sm text-gray-400">© 2026 Modas Dilô - Recreio dos Bandeirantes, RJ</p>
+            <p class="text-sm text-brand-yellow">© 2026 Modas Dilô - Recreio dos Bandeirantes, RJ</p>
         </div>
     </footer>
 
@@ -439,6 +439,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
