--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
             <h3 class="text-2xl font-bold mb-4 text-brand-yellow">Modas Dilô</h3>
             <p class="text-brand-yellow mb-6">Moda feminina com qualidade e estilo</p>
             <div class="flex justify-center gap-8 mb-6 flex-wrap">
-                <a href="https://www.modasdilo.com.br/" class="hover:text-brand-yellow transition-colors"><span style="brand-green">Loja Online</span></a>
-                <a href="https://www.instagram.com/modasdilo/" target="_blank" class="hover:text-brand-yellow transition-colors"><span style="brand-green"Instagram</span></a>
-                <a href="https://www.modasdilo.com.br/moda-praia/" class="hover:text-brand-yellow transition-colors"><span style="brand-green"Moda Praia</span></a>
+                <a href="https://www.modasdilo.com.br/" class="color:#000 hover:text-brand-yellow transition-colors">Loja Online</a>
+                <a href="https://www.instagram.com/modasdilo/" target="_blank" class="hover:text-brand-yellow transition-colors">Instagram</a>
+                <a href="https://www.modasdilo.com.br/moda-praia/" class="hover:text-brand-yellow transition-colors">Moda Praia</a>
             </div>
             <p class="text-sm text-brand-yellow">© 2026 Modas Dilô - Recreio dos Bandeirantes, RJ</p>
         </div>
@@ -439,6 +439,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
