--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="text-sm uppercase mt-1 text-white">Dias</div>
                     </div>
                     <div class="bg-brand-blue rounded-xl p-4 min-w-[80px]">
-                        <div class="text-4xl md:text-5xl font-bold text-brand-yellow" id="hours">00</div>
+                        <div class="text-4xl md:text-5xl font-bold text-brand-peach" id="hours">00</div>
                         <div class="text-sm uppercase mt-1 text-white">Horas</div>
                     </div>
                     <div class="bg-brand-blue rounded-xl p-4 min-w-[80px]">
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
