--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
                     <!-- Produto 1 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <p class="text-gray-500 text-center px-4 text-sm">[PRODUTO 1]<br/>images/produto1.jpg</p>
+                            <img src="images/Biquíni Cortininha com Detalhes.jpeg" width="570px" height="646px"
                         </div>
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Nome do Produto</h3>
-                            <p class="text-gray-600 mb-4">Descrição breve</p>
+                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Biquíni Cortininha com Detalhes</h3>
+                            <p class="text-gray-600 mb-4">Este modelo clássico ganha um toque especial com detalhes sofisticados que realçam sua beleza.</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-bold text-brand-blue">R$ 99,90</span>
+                                <span class="text-2xl font-bold text-brand-blue">R$ 179,90</span>
                                 <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
