--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <!-- Produto 1 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <img src="images/Biquíni Cortininha com Detalhes.jpeg" width="570px" height="646px"
+                            <img src="images/Biquíni-Cortininha-com-Detalhes-01.jpg" width="360px" height="480px">
                         </div>
                         <div class="p-6">
                             <h3 class="font-bold text-xl mb-2 text-brand-blue">Biquíni Cortininha com Detalhes</h3>
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
