--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <p class="text-gray-600 mb-4">Este modelo clássico ganha um toque especial com detalhes sofisticados que realçam sua beleza.</p>
                             <div class="flex items-center justify-between">
                                 <span class="text-2xl font-bold text-brand-blue">R$ 179,90</span>
-                                <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
+                                <a href="https://www.modasdilo.com.br/produtos/biquini-cortininha-com-detalhes-1vpwk/" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
                     </div>
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
