--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                     <!-- Produto 2 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <p class="text-gray-500 text-center px-4 text-sm">[PRODUTO 2]<br/>images/produto2.jpg</p>
+                            <img src="images/Biquíni-Juy-tropicalmente.jpg" width="360px" height="480px">
                         </div>
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Nome do Produto</h3>
-                            <p class="text-gray-600 mb-4">Descrição breve</p>
+                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Biquíni Juy tropicalmente</h3>
+                            <p class="text-gray-600 mb-4">Biquini com Aro e Elo na cor dourada no centro do mesmo, amarração nas costas para melhor ajuste ao seio.</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-bold text-brand-blue">R$ 129,90</span>
+                                <span class="text-2xl font-bold text-brand-blue">R$ 289,90</span>
                                 <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
@@ -217,13 +217,13 @@
                     <!-- Produto 3 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <p class="text-gray-500 text-center px-4 text-sm">[PRODUTO 3]<br/>images/produto3.jpg</p>
+                           <img src="images/Biquíni-cortininha-trilobal-calcinha-como-amarrações-e-miçangas.jpg" width="360px" height="480px">
                         </div>
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Nome do Produto</h3>
-                            <p class="text-gray-600 mb-4">Descrição breve</p>
+                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Biquíni cortininha trilobal</h3>
+                            <p class="text-gray-600 mb-4">Biquíni cortininha trilobal , calcinha como amarrações e miçangas</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-bold text-brand-blue">R$ 89,90</span>
+                                <span class="text-2xl font-bold text-brand-blue">R$ 279,90</span>
                                 <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
@@ -231,13 +231,13 @@
                     <!-- Produto 4 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <p class="text-gray-500 text-center px-4 text-sm">[PRODUTO 4]<br/>images/produto4.jpg</p>
+                           <img src="images/Biquíni-Tomara-que-Caia-com-Poás.jpg" width="360px" height="480px">
                         </div>
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Nome do Produto</h3>
-                            <p class="text-gray-600 mb-4">Descrição breve</p>
+                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Biquíni Tomara que Caia com Poás</h3>
+                            <p class="text-gray-600 mb-4">Descubra o Biquíni Tomara que Caia com Poás, perfeito para quem busca charme e conforto na praia ou piscina.</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-bold text-brand-blue">R$ 149,90</span>
+                                <span class="text-2xl font-bold text-brand-blue">R$ 220,00</span>
                                 <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
