--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <p class="text-gray-600 mb-4">Biquini com Aro e Elo na cor dourada no centro do mesmo, amarração nas costas para melhor ajuste ao seio.</p>
                             <div class="flex items-center justify-between">
                                 <span class="text-2xl font-bold text-brand-blue">R$ 289,90</span>
-                                <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
+                                <a href="https://www.modasdilo.com.br/produtos/biquini-juy-tropicalmente-1b9dv/" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                             <p class="text-gray-600 mb-4">Biquíni cortininha trilobal , calcinha como amarrações e miçangas</p>
                             <div class="flex items-center justify-between">
                                 <span class="text-2xl font-bold text-brand-blue">R$ 279,90</span>
-                                <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
+                                <a href="https://www.modasdilo.com.br/produtos/biquini-cortininha-trilobal-calcinha-como-amarracoes-e-micangas-nsje5/" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                             <p class="text-gray-600 mb-4">Descubra o Biquíni Tomara que Caia com Poás, perfeito para quem busca charme e conforto na praia ou piscina.</p>
                             <div class="flex items-center justify-between">
                                 <span class="text-2xl font-bold text-brand-blue">R$ 220,00</span>
-                                <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
+                                <a href="https://www.modasdilo.com.br/produtos/biquini-tomara-que-caia-com-poas-yt8y0/" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
                     </div>
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
