--- a/index.html
+++ b/index.html
@@ -245,28 +245,28 @@
                     <!-- Produto 5 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <p class="text-gray-500 text-center px-4 text-sm">[PRODUTO 5]<br/>images/produto5.jpg</p>
+                            <img src="images/Biquíni de duas peças com estampa animal.jpg" width="360px" height="480px">
                         </div>
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Nome do Produto</h3>
-                            <p class="text-gray-600 mb-4">Descrição breve</p>
+                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Biquíni de duas peças com estampa animal</h3>
+                            <p class="text-gray-600 mb-4">Destaque-se nas praias e piscinas com este biquíni de duas peças que une modernidade e elegância. </p>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-bold text-brand-blue">R$ 119,90</span>
-                                <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
+                                <span class="text-2xl font-bold text-brand-blue">R$ 279,90</span>
+                                <a href="https://www.modasdilo.com.br/produtos/biquini-de-duas-pecas-com-estampa-animal-1yk3m/" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
                     </div>
                     <!-- Produto 6 -->
                     <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden border-2 border-gray-100">
                         <div class="bg-gray-200 aspect-[3/4] flex items-center justify-center">
-                            <p class="text-gray-500 text-center px-4 text-sm">[PRODUTO 6]<br/>images/produto6.jpg</p>
+                            <img src="images/Vestido curto com franjas.jpg" width="360px" height="480px">
                         </div>
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Nome do Produto</h3>
-                            <p class="text-gray-600 mb-4">Descrição breve</p>
+                            <h3 class="font-bold text-xl mb-2 text-brand-blue">Vestido curto com franjas</h3>
+                            <p class="text-gray-600 mb-4">Este vestido curto com franjas é perfeito para quem deseja um visual moderno e cheio de personalidade.</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-bold text-brand-blue">R$ 139,90</span>
-                                <a href="#" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
+                                <span class="text-2xl font-bold text-brand-blue">R$ 279,90</span>
+                                <a href="https://www.modasdilo.com.br/produtos/vestido-curto-com-franjas-nm07g/" class="gradient-btn-green text-white px-6 py-3 rounded-full transition-all font-semibold shadow-md hover:shadow-lg">Ver Mais</a>
                             </div>
                         </div>
                     </div>
@@ -442,6 +442,7 @@
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
             const
+
 
 
 
