--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <div class="grid md:grid-cols-2">
                         <div class="bg-gradient-to-br from-brand-peach to-brand-peacher p-8 md:p-12 text-white flex flex-col justify-center">
                             <h2 class="text-3xl md:text-4xl font-bold mb-6"><span style="color:#000">Ganhe 10% OFF na Próxima Compra! 🎁</span></h2>
-                            <p class="text-lg mb-6 color:#000">Cadastre-se e receba um cupom exclusivo de <strong class="text-brand-yellow">10% de desconto</strong> para usar em qualquer compra futura!</p>
+                            <p class="text-lg mb-6"><span style="color:#000">Cadastre-se e receba um cupom exclusivo de</span> <strong class="text-brand-yellow">10% de desconto</strong> <span style="color:#000">para usar em qualquer compra futura!</span></p>
                             <ul class="space-y-3">
                                 <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Cupom enviado por e-mail</span></li>
                                 <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Sem valor mínimo de compra</span></li>
@@ -468,6 +468,7 @@
         // });
     });
 </script>
+
 
 
 
