--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                             </ul>
                         </div>
                         <div class="p-8 md:p-12 bg-white">
-                            <form id="leadForm" class="space-y-5">
+                            <!---<form id="leadForm" class="space-y-5">
                                 <div>
                                     <label class="block text-brand-blue font-semibold mb-2">Nome Completo *</label>
                                     <input type="text" id="nome" required class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-brand-green focus:outline-none" placeholder="Seu nome">
@@ -362,7 +362,8 @@
                                 </div>
                                 <button type="submit" class="w-full gradient-btn-green text-white font-bold text-lg py-4 rounded-lg transition-all transform hover:scale-105 shadow-lg">Quero Meu Cupom de 10% OFF! 🎉</button>
                                 <p class="text-sm text-gray-500 text-center">Seus dados estão seguros conosco. Sem spam!</p>
-                            </form>
+                            </form>--->
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe6ULwN5W9puwWJXabji7I4nLRIUCPRXqxD7gIxOJD2MeqcAw/viewform?embedded=true" width="640" height="1011" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
                             <div id="successMessage" class="hidden mt-6 p-4 bg-green-100 border-2 border-green-500 rounded-lg text-center">
                                 <p class="text-green-700 font-bold text-lg">✅ Cadastro realizado com sucesso!</p>
                                 <p class="text-green-600 mt-2">Seu cupom será enviado para o e-mail cadastrado em instantes.</p>
@@ -468,6 +469,7 @@
         // });
     });
 </script>
+
 
 
 
