--- a/index.html
+++ b/index.html
@@ -328,7 +328,33 @@
     </section>
 
     <!-- FORMULÁRIO -->
-    <section class="py-20 gradient-bg-hero">
+    <!-- FORMULÁRIO -->
+<section class="py-20 bg-brand-blue">
+    <div class="container mx-auto px-4">
+        <div class="max-w-5xl mx-auto">
+            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden">
+                <div class="grid md:grid-cols-5">
+                    <!-- COLUNA 1 - TEXTO (2 colunas de largura) -->
+                    <div class="md:col-span-2 bg-gradient-to-br from-brand-blue to-brand-green p-8 md:p-12 text-white flex flex-col justify-center">
+                        <h2 class="text-3xl md:text-4xl font-bold mb-6">Ganhe 10% OFF na Próxima Compra! 🎁</h2>
+                        <p class="text-lg mb-6 text-gray-100">Cadastre-se e receba um cupom exclusivo de <strong class="text-brand-yellow">10% de desconto</strong> para usar em qualquer compra futura!</p>
+                        <ul class="space-y-3">
+                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Cupom enviado por e-mail na hora</span></li>
+                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Sem valor mínimo de compra</span></li>
+                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Promoções exclusivas em primeira mão</span></li>
+                        </ul>
+                    </div>
+                    
+                    <!-- COLUNA 2 - FORMULÁRIO (3 colunas de largura) -->
+                    <div class="md:col-span-3 p-0 bg-white">
+                        <iframe src="COLE_AQUI_A_URL_DO_SEU_GOOGLE_FORMS" width="100%" height="1011" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!---    <section class="py-20 gradient-bg-hero">
         <div class="container mx-auto px-4">
             <div class="max-w-4xl mx-auto">
                 <div class="bg-white rounded-3xl shadow-2xl overflow-hidden">
@@ -343,7 +369,7 @@
                             </ul>
                         </div>
                         <div class="p-8 md:p-12 bg-white">
-                            <!---<form id="leadForm" class="space-y-5">
+                            <form id="leadForm" class="space-y-5">
                                 <div>
                                     <label class="block text-brand-blue font-semibold mb-2">Nome Completo *</label>
                                     <input type="text" id="nome" required class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-brand-green focus:outline-none" placeholder="Seu nome">
@@ -362,7 +388,7 @@
                                 </div>
                                 <button type="submit" class="w-full gradient-btn-green text-white font-bold text-lg py-4 rounded-lg transition-all transform hover:scale-105 shadow-lg">Quero Meu Cupom de 10% OFF! 🎉</button>
                                 <p class="text-sm text-gray-500 text-center">Seus dados estão seguros conosco. Sem spam!</p>
-                            </form>--->
+                            </form>
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe6ULwN5W9puwWJXabji7I4nLRIUCPRXqxD7gIxOJD2MeqcAw/viewform?embedded=true" width="640" height="1011" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
                             <div id="successMessage" class="hidden mt-6 p-4 bg-green-100 border-2 border-green-500 rounded-lg text-center">
                                 <p class="text-green-700 font-bold text-lg">✅ Cadastro realizado com sucesso!</p>
@@ -373,7 +399,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>--->
 
     <!-- CTA FINAL -->
     <section class="py-20 bg-white">
@@ -469,6 +495,7 @@
         // });
     });
 </script>
+
 
 
 
