--- a/index.html
+++ b/index.html
@@ -329,19 +329,19 @@
 
     <!-- FORMULÁRIO -->
     <!-- FORMULÁRIO -->
-<section class="py-20 bg-brand-blue">
+<section class="py-20 gradient-bg-hero">
     <div class="container mx-auto px-4">
         <div class="max-w-5xl mx-auto">
             <div class="bg-white rounded-3xl shadow-2xl overflow-hidden">
                 <div class="grid md:grid-cols-5">
                     <!-- COLUNA 1 - TEXTO (2 colunas de largura) -->
-                    <div class="md:col-span-2 bg-gradient-to-br from-brand-blue to-brand-green p-8 md:p-12 text-white flex flex-col justify-center">
-                        <h2 class="text-3xl md:text-4xl font-bold mb-6">Ganhe 10% OFF na Próxima Compra! 🎁</h2>
-                        <p class="text-lg mb-6 text-gray-100">Cadastre-se e receba um cupom exclusivo de <strong class="text-brand-yellow">10% de desconto</strong> para usar em qualquer compra futura!</p>
+                    <div class="md:col-span-2 bg-gradient-to-br from-brand-peach to-brand-peacher p-8 md:p-12 text-white flex flex-col justify-center">
+                        <h2 class="text-3xl md:text-4xl font-bold mb-6"><span style="color:#000">Ganhe 10% OFF na Próxima Compra!</span> 🎁</h2>
+                        <p class="text-lg mb-6"><span style="color:#000">Cadastre-se e receba um cupom exclusivo de</span> <strong class="text-brand-yellow">10% de desconto</strong> <span style="color:#000">para usar em qualquer compra futura!</span></p>
                         <ul class="space-y-3">
-                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Cupom enviado por e-mail na hora</span></li>
-                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Sem valor mínimo de compra</span></li>
-                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span>Promoções exclusivas em primeira mão</span></li>
+                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Cupom enviado por e-mail na hora</span></li>
+                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Sem valor mínimo de compra</span></li>
+                            <li class="flex items-center gap-3"><span class="text-2xl">✅</span><span style="color:#000">Promoções exclusivas em primeira mão</span></li>
                         </ul>
                     </div>
                     
@@ -495,6 +495,7 @@
         // });
     });
 </script>
+
 
 
 
