--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="bg-white rounded-3xl shadow-2xl overflow-hidden">
                 <div class="grid md:grid-cols-5">
                     <!-- COLUNA 1 - TEXTO (2 colunas de largura) -->
-                    <div class="md:col-span-2 bg-gradient-to-br from-brand-peach to-brand-peacher p-8 md:p-12 text-white flex flex-col justify-center">
+                    <div class="md:col-span-2 bg-gradient-to-br from-brand-peach to-brand-peacher p-8 md:p-12 text-white flex flex-col justify-top">
                         <h2 class="text-3xl md:text-4xl font-bold mb-6"><span style="color:#000">Ganhe 10% OFF na Próxima Compra!</span> 🎁</h2>
                         <p class="text-lg mb-6"><span style="color:#000">Cadastre-se e receba um cupom exclusivo de</span> <strong class="text-brand-yellow">10% de desconto</strong> <span style="color:#000">para usar em qualquer compra futura!</span></p>
                         <ul class="space-y-3">
@@ -347,7 +347,7 @@
                     
                     <!-- COLUNA 2 - FORMULÁRIO (3 colunas de largura) -->
                     <div class="md:col-span-3 p-0 bg-white">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe6ULwN5W9puwWJXabji7I4nLRIUCPRXqxD7gIxOJD2MeqcAw/viewform?embedded=true" width="640" height="1011" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe><br><br><br><br><br>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe6ULwN5W9puwWJXabji7I4nLRIUCPRXqxD7gIxOJD2MeqcAw/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe><br>
                     </div>
                 </div>
             </div>
@@ -495,6 +495,7 @@
         // });
     });
 </script>
+
 
 
 
